# Signal_Platform

./: .env.example  .gitignore  DEPLOY_HF_SPACES.md  README.md  loguru.py  pyproject.toml  requirements.txt  setup_nightly_task.ps1  setup_smc_realtime_alert_task.ps1  streamlit_app.py  touch_redeploy.txt  yfinance.py
.cache/: meta.json  stock_list_TW.parquet  stock_list_VN.parquet
.streamlit/: config.toml  secrets.toml.example
data/: due_diligence_codes.txt  foundation_vn_3y.parquet  nightly_scan_meta.json  nightly_scan_results.json  nightly_telegram_snapshot.json  portfolio_codes.txt  smc_realtime_alert_state.json  stock_analysis.sqlite3
docs/: AUDIT_ALPHA_SCANNER.md  PLAN-alpha-scanner.md  PLAN-market-alpha-scanner.md  TRADING_GUIDE.md
pine/: smc_fvg_ob_tactical.pine
scripts/: build_vn_foundation_cache.py  check_yfinance_vn_coverage.py  diag_smc_4919.py  fix_parquet_scale.py  nightly_foreign_flow_cache.py  nightly_full_scan.py  nightly_scanner.py  nightly_taiwan_flow_cache.py  nightly_vn_cache.py  patch_gemini_fallback.py  patch_mozyfin.py  refresh_market_cache.py  run_nightly_scan_task.ps1  run_smc_realtime_alert_task.ps1  show_results.py  smc_realtime_alert_bot.py  test_mozyfin.py  update_taiwan_stocks.py  verify_foundation_model.py  vn_screener.py
src/: __init__.py  cache_manager.py  config.py  gemini_client.py  llm_advisor.py  models.py  mozyfin_client.py  order_manager.py  risk_manager.py  vn_price.py  watchlist.py
tests/: conftest.py  test_integration.py  test_intraday_plan.py  test_plugins.py  test_quant_money_flow.py  test_real_flow.py  (+6 more)
(+1686 files in other folders)
