[project]
name = "trading-system"
version = "1.0.0"
description = "Trading Intelligence System — Trend-Following + Manipulation Shield"
requires-python = ">=3.10"

[tool.ruff]
line-length = 88
target-version = "py310"
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
